# cupang-downloader

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
CHANGELOG/: index.html
docs/scripts/: gen_pages.py
example/: git_downloader.py  rich_callback.py
example/SUMMARY/: index.html
example/git_downloader/: index.html
example/rich_callback/: index.html
reference/SUMMARY/: index.html
reference/cupang_downloader/downloader/: index.html
reference/cupang_downloader/downloaders/aria2_downloader/: index.html
reference/cupang_downloader/downloaders/base/: index.html
reference/cupang_downloader/downloaders/curl_downloader/: index.html
reference/cupang_downloader/downloaders/pycurl_downloader/: index.html
reference/cupang_downloader/downloaders/requests_downloader/: index.html
reference/cupang_downloader/downloaders/urllib_downloader/: index.html
reference/cupang_downloader/downloaders/wget_downloader/: index.html
reference/cupang_downloader/error/: index.html
reference/cupang_downloader/job/: index.html
reference/cupang_downloader/utils/: index.html
scripts/: gen_pages.py
search/: search_index.json
src/cupang_downloader/: __init__.py  _default.py  _logger.py  downloader.py  error.py  job.py  utils.py
src/cupang_downloader/downloaders/: aria2_downloader.py  base.py  curl_downloader.py  pycurl_downloader.py  requests_downloader.py  urllib_downloader.py  wget_downloader.py
